Revert "Update gitignore"
This reverts commit f8d20a31db998bfeb0003fccd38d205dfaf3f474.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Assets/Script/PlayerController.cs
+ProjectSettings/TagManager.asset
+ProjectSettings/EditorBuildSettings.asset
